--- a/css/main.css
+++ b/css/main.css
@@ -406,3 +406,8 @@ header.header-post .post-heading .post-subheading {
 .blog-post table tr td :last-child {
   margin-bottom: 0;
 }
+
+/* --- Arrange --- */
+article img {
+  max-width: 100%;
+}
