--- a/_includes/footer-scripts.html
+++ b/_includes/footer-scripts.html
@@ -22,4 +22,7 @@
   {% endfor %}
 {% endif %}
 
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51dd64077bbe5419" async="async"></script>
+
 {% include google_analytics.html %}
