--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,8 +19,10 @@ layout: default
 <article>
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-	  {{ content }}
-	</div>
+      <!-- Go to www.addthis.com/dashboard to customize your tools -->
+      <div class="addthis_sharing_toolbox"></div>
+      {{ content }}
+    </div>
   </div>
 </article>
 
